# fst

./: Cargo.toml  README.md
src/: main.rs
src/files/: mod.rs
